live connection integration tests, move to base